<resources>
    <string name="app_name">StudyChart</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">View Profile</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_Podcast">Podcast</string>
    <string name="menu_Library">Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_Interest">Interest</string>
    <string name="menu_BecomeMember">Become a Member</string>
    <string name="menu_Stats">Stats</string>
    <string name="menu_Stories">Stories</string>
    <string name="menu_New_Story">New Story</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_Help">Help</string>
    <string name="Profile_name">Akanimo Ekong</string>
    <string name="article_text">Q: What Amount Does Marking Cost? \nQ: What\'s Remembered For A Marking Bundle?\nQ: What Are The Principle Topographical Areas Of The Best Organizations?</string>

</resources>