<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_Podcast" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_Library" />
        <item
            android:id="@+id/nav_Interest"
            android:title="@string/menu_Interest"/>
        <item
            android:id="@+id/nav_BecomeMember"
            android:title="@string/menu_BecomeMember"/>
        <item
            android:id="@+id/nav_Statistics"
            android:title="@string/menu_Stats"/>
        <item
            android:id="@+id/nav_Stories"
            android:title="@string/menu_Stories"/>
        <item
            android:id="@+id/nav_New_Story"
            android:title="@string/menu_New_Story"/>
        <item
            android:id="@+id/nav_Settings"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/nav_Help"
            android:title="@string/menu_Help"/>
    </group>
</menu>