<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.studychart.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.studychart.ui.gallery.GalleryFragment"
        android:label="@string/menu_Podcast"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.studychart.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_Library"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/interest"
        android:name="com.example.studychart.Interest"
        android:label="fragment_interest"
        tools:layout="@layout/fragment_interest" />
    <fragment
        android:id="@+id/becomeMember"
        android:name="com.example.studychart.BecomeMember"
        android:label="fragment_become_member"
        tools:layout="@layout/fragment_become_member" />
</navigation>